--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -277,7 +277,8 @@
                 RadiusBottomRight: =8
                 RadiusTopLeft: =8
                 RadiusTopRight: =8
-                Width: =1270
+                Width: =If(_ResponsiveM = false,  1010, 1265)
+                X: =2
                 ZIndex: =25
 
                 IconAtencion As icon.Hospital:
@@ -787,7 +788,7 @@
             RadiusTopRight: =4
             Text: =""
             Width: =36
-            X: =707
+            X: =693
             Y: =84
             ZIndex: =9
 
@@ -795,7 +796,7 @@
             Height: =24
             Image: =Filter
             Width: =24
-            X: =713
+            X: =699
             Y: =90
             ZIndex: =10
 
@@ -2714,57 +2715,6 @@
         X: =941
         Y: =32
         ZIndex: =17
-
-    Group6_5 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =18
-
-        btn_Emergencia_AC_Citas As button:
-            BorderColor: =RGBA(0, 0, 0, 1)
-            Fill: =RGBA(232, 17, 17, 1)
-            Font: =Font.'Segoe UI'
-            Height: =44
-            HoverFill: =RGBA(0, 0, 0, 0.1)
-            OnSelect: |-
-                =UpdateContext({_varEmergenciaAtencionCliente:true})
-            PressedFill: =RGBA(0, 0, 0, 0.15)
-            Size: =14
-            Text: ="EMERGENCIA"
-            Width: =280
-            X: =835
-            Y: =26
-            ZIndex: =7
-
-        TextInput5_41 As text:
-            BorderColor: =RGBA(0, 0, 0, 1)
-            Default: =""
-            DisabledBorderColor: =RGBA(0, 0, 0, 1)
-            DisabledFill: =RGBA(255, 255, 255, 1)
-            Font: =Font.'Segoe UI'
-            Height: =48
-            PaddingLeft: =0
-            PaddingRight: =64
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
-            Visible: =false
-            Width: =500
-            X: =322
-            Y: =171
-            ZIndex: =8
-
-        Image18_11 As image:
-            Height: =27
-            Image: ='Shape (53)'
-            Visible: =false
-            Width: =29
-            X: =749
-            Y: =34
-            ZIndex: =9
 
     Group3_19 As group:
         Height: =5
