--- a/AppBolivar/Src/App.fx.yaml
+++ b/AppBolivar/Src/App.fx.yaml
@@ -69,13 +69,18 @@ App As appinfo:
                     )
                 ),
                 SampleImage,
-                AzureBlobStorage.GetFileContent(
+                IfError( IsBlank(AzureBlobStorage.GetFileContent(
                     LookUp(
                         'public.Medical_Center_Consultorio_Medico',
                         id_sede = _varSede.id,
                         Imagen_Id
                     )
-                )
+                )), SampleImage, AzureBlobStorage.GetFileContent(
+                    LookUp(
+                        'public.Medical_Center_Consultorio_Medico',
+                        id_sede = _varSede.id,
+                        Imagen_Id
+                )))
             )
         );
         //REVISAR, al primer onstart no figura el logo
