--- a/AppBolivar/Src/scDataAntigua.fx.yaml
+++ b/AppBolivar/Src/scDataAntigua.fx.yaml
@@ -1703,7 +1703,7 @@ scDataAntigua As screen:
                 HoverColor: =RGBA(44, 97, 112, 1)
                 HoverFill: =RGBA(255, 255, 255, 1)
                 OnSelect: |-
-                    =UpdateContext({_varData: "img"});
+                    =UpdateContext({_varData: "img"});Set(_varDatass, Buscador.Run(recordsvalue.id));
                 PaddingBottom: =0
                 PaddingLeft: =0
                 PaddingRight: =0
@@ -2422,7 +2422,7 @@ scDataAntigua As screen:
                                 PaddingRight: =0
                                 PaddingTop: =0
                                 Size: =15
-                                Text: =//ThisItem.Value.Name
+                                Text: =ThisItem.Value.Name
                                 Wrap: =false
                                 ZIndex: =1
 
@@ -2434,10 +2434,12 @@ scDataAntigua As screen:
                             Width: =165
                             ZIndex: =2
 
-                            Button14 As button:
-                                OnSelect: =//Launch(ThisItem.Value.LinkingUrl)
-                                Text: ="Botón"
-                                ZIndex: =2
+                            Icon60 As icon.DocumentwithContent:
+                                AlignInContainer: =AlignInContainer.Stretch
+                                Color: =RGBA(0, 0, 0, 1)
+                                Icon: =Icon.DocumentWithContent
+                                OnSelect: =Launch(ThisItem.Value.LinkingUrl)
+                                ZIndex: =3
 
                 Label95_35 As label:
                     Font: =Font.'Segoe UI'
@@ -2461,13 +2463,6 @@ scDataAntigua As screen:
                     X: =16
                     Y: =58
                     ZIndex: =9
-
-            Button13 As button:
-                OnSelect: =Set(_varDatass, Buscador.Run(recordsvalue.id));
-                Text: ="Botón"
-                X: =977
-                Y: =90
-                ZIndex: =18
 
     Group39_3 As group:
         Height: =5
